# MIXEDVISION

./: CMakeHeaderFileList.cmake  CMakeLists.txt  CMakeSourceFileList.cmake  Readme.md
MCORE/: CMakeLists.txt  commun.h
MCORE/MCALIB/: CCalibrationModel.cpp  CCalibrationModel.h  CCalibrationOmni.cpp  CCalibrationOmni.h  CCalibrationParaboloid.cpp  CCalibrationParaboloid.h  CCalibrationPerspective.cpp  CCalibrationPerspective.h  CCalibrationStereo.cpp  CCalibrationStereo.h  CMakeLists.txt  CMire.cpp  CMire.h
MCORE/MGEOMETRY/: CMakeLists.txt  CModel.cpp  CModel.h  CModelStereo.cpp  CModelStereo.h  COmni.cpp  COmni.h  CParaboloid.cpp  CParaboloid.h  CPerspective.cpp  CPerspective.h  CPoint.cpp  CPoint.h
MCORE/MIMGPROC/: CCorner.cpp  CCorner.h  CMakeLists.txt  CRing.cpp  CRing.h
MCORE/MIO/: CMakeLists.txt  CMireXml.cpp  CMireXml.h  CModelStereoXml.cpp  CModelStereoXml.h  CModelXml.cpp  CModelXml.h  COmniXml.cpp  COmniXml.h  CPerspectiveXml.cpp  CPerspectiveXml.h  CXml.cpp  CXml.h
MCORE/MPOSE/: CMakeLists.txt  CPose.cpp  CPose.h  CPoseOmni.cpp  CPoseOmni.cpp.old  CPoseOmni.h  CPoseParaboloid.cpp  CPoseParaboloid.h  CPosePerspective.cpp  CPosePerspective.h  CPoseStereo.cpp  CPoseStereo.h
MINTERFACE/: CInterface.cpp  CInterface.h  CMakeHeaderFileList.cmake  CMakeLists.txt  CMakeSourceFileList.cmake
MUI/: CMakeLists.txt  calibrateSystem.cpp
calibTargetFilesToHaveInTheMUIExecDir/: parametresMire0.txt  parametresMire1.txt  parametresMire2.txt
useLibsFiles/: MCOREBuildSettings.cmake  MCOREConfig.cmake  MCORELibraryDepends.cmake  MCOREUse.cmake  MINTERFACEBuildSettings.cmake  MINTERFACEConfig.cmake  MINTERFACELibraryDepends.cmake  MINTERFACEUse.cmake
vispHeaderFileForCRing/: vpDot2.h
